...
        
        //3. Grab the value from the text field, and print it when the user clicks OK.
        alert.addAction(UIAlertAction(title: "OK", style: .Default, handler: { (action) -> Void in
            /*
            let query = PFQuery(className:"RanchInfo");
...
        
        //1. Create the alert controller.
        var alert = UIAlertController(title: "Enter Email", message: "This appears to be your first time using the app. Please set you email.", preferredStyle: .Alert)
        
        //2. Add the text field. You can configure it however you need.
        alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
            textField.placeholder="name@example.com"
            //textField.becomeFirstResponder()
        })
...
            if(!self.isValidEmail(alert.textFields![0].text!))
            {
                alert.title = "Incorrect Email"
                //alert = UIAlertController(title: "Incorrect Email", message: "Please set the Email", preferredStyle: .Alert)
            self.presentViewController(alert, animated: true, completion: nil)
...
            
        }))
        alert.addAction(UIAlertAction(title: "Not now", style: .Default, handler: { (action) -> Void in
            
            
...
        
        //1. Create the alert controller.
        var alert = UIAlertController(title: "Enter your Name", message: "Please set your First Name.", preferredStyle: .Alert)
        
        //2. Add the text field. You can configure it however you need.
        alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
            textField.placeholder = "Your First Name"
        })
        
...
        
        //1. Create the alert controller.
        var alert = UIAlertController(title: "Enter Clinic Name", message: "Please set the clinic Name", preferredStyle: .Alert)
        
        //2. Add the text field. You can configure it however you need.
        alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
            textField.placeholder = "Your Clinic Name"
        })
        
...
        //2. Add the text field. You can configure it however you need.
        alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
            textField.placeholder = "Your Last Name"
        })
        
...
        
        //1. Create the alert controller.
        var alert = UIAlertController(title: "Enter your Address1", message: "Please set the Address1", preferredStyle: .Alert)
        
        //2. Add the text field. You can configure it however you need.
        alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
            textField.placeholder = "Your Address1"
        })
        
...
        
        //1. Create the alert controller.
        let alert = UIAlertController(title: "Enter your Address2", message: "Please set the Address2", preferredStyle: .Alert)
        
        //2. Add the text field. You can configure it however you need.
...
        
        //1. Create the alert controller.
        var alert = UIAlertController(title: "Enter your City", message: "Please set the City", preferredStyle: .Alert)
        
        //2. Add the text field. You can configure it however you need.
        alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
            textField.placeholder = "Your City"
        })
        
...
        
        //1. Create the alert controller.
        var alert = UIAlertController(title: "Enter your Phone", message: "Please set the Phone Number", preferredStyle: .Alert)
        
        //2. Add the text field. You can configure it however you need.
        alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
            textField.keyboardType = UIKeyboardType.NumberPad
            textField.placeholder = "Your Phone Number"
        })
        
...
        
        //1. Create the alert controller.
        var alert = UIAlertController(title: "Enter your Zip Code", message: "Please set the Zip Code", preferredStyle: .Alert)
        
        //2. Add the text field. You can configure it however you need.
...
            textField.keyboardType = UIKeyboardType.PhonePad
            
            textField.placeholder = "Your Zip Code"
        })
        
...
            if(alert.textFields![0].text == "" || alert.textFields![0].text?.characters.count != 5)
            {
                alert.title = "Incorrect Zip"
                
                self.presentViewController(alert, animated: true, completion: nil)
...
