...
                                <rect key="frame" x="20" y="100" width="560" height="42"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="Groups"/>
                                <connections>
                                    <segue destination="I7s-Q6-sZM" kind="show" id="LoH-IR-vQV"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address 1" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IJU-er-x6n" customClass="JVFloatLabeledTextField">
                                                    <rect key="frame" x="8" y="12" width="584" height="42"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Zip" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ob6-Cr-CWV" customClass="JVFloatLabeledTextField">
                                                    <rect key="frame" x="8" y="12" width="584" height="42"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HeV-EB-lf0" customClass="JVFloatLabeledTextField">
                                                    <rect key="frame" x="8" y="12" width="584" height="42"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add New Group" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FqQ-zS-nSB">
                                            <rect key="frame" x="8" y="8" width="584" height="27"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Rancher Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tXx-Zp-3ad" customClass="JVFloatLabeledTextField">
                                                <rect key="frame" x="20" y="75" width="560" height="47"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Rancher Name"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Phone" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HhA-Ez-ooY" customClass="JVFloatLabeledTextFiel
                                                <rect key="frame" x="20" y="460" width="560" height="47"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Phone"/>
...
                                                <rect key="frame" x="20" y="515" width="560" height="55"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                                <state key="normal" title="Save"/>
                                                <connections>
                                                    <action selector="saveClicked:" destination="RF5-lK-xig" eventType="touchUpInside" id="GRu-QV-u1h"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Add New Bull" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="va3-wr-ix3">
                                            <rect key="frame" x="8" y="8" width="584" height="28"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ME-4h-QAg">
                                                <rect key="frame" x="20" y="75" width="560" height="21"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
