...
    @IBAction func phone(sender: AnyObject) {
        if(phone.text != "")
        {
            
            if( !validate(phone.text!))
            {
                let alert = UIAlertController(title: "Incorrect phone", message: " The Phone number address you have input is wrong", preferredStyle: .Alert)
                
                //2. Add the text field. You can configure it however you need.
                alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
                    textField.text = self.phone.text
                })
                
...
    @IBAction func Email(sender: AnyObject) {
        if(lastName.text != "")
        {
           // let searchCharacter: Character = "@"
            if(!isValidEmail(lastName.text!))
            {
                let alert = UIAlertController(title: "Incorrect email", message: " The Email address you have input is wrong", preferredStyle: .Alert)
              
                //2. Add the text field. You can configure it however you need.
                alert.addTextFieldWithConfigurationHandler({ (textField) -> Void in
                    textField.text = self.lastName.text
                })
                
...
